nullaway_error_65e422da-407b-4302-9917-9d1146a154d2.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/MapArea.java:30: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    this(0, null, x, y, width, height);
            ^
    (see http://t.uber.com/nullaway )
